# TSCRT

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh.md  build-linux.sh  build.sh  env.sh  install.sh  linux_build.txt  mac_build.txt  release-linux.sh  release-mac.sh  release-win.bat  release-win.sh  run-tscrt.bat
core/: platform_posix.c  platform_win.c  profile.c
gui/: ActionParser.cpp  ActionParser.h  AutomationEngine.cpp  AutomationEngine.h  BroadcastDialog.cpp  BroadcastDialog.h  ButtonBar.cpp  ButtonBar.h  CommandLineWidget.cpp  CommandLineWidget.h  CrashHandler.cpp  CrashHandler.h  Credentials.cpp  Credentials.h  CronSchedule.cpp  CronSchedule.h  DiagnosticExporter.cpp  DiagnosticExporter.h  FindBar.cpp  FindBar.h  HelpDialog.cpp  HelpDialog.h  ISession.h  LinkBroker.cpp  LinkBroker.h  LinkDialog.cpp  LinkDialog.h  LogSettingsDialog.cpp  LogSettingsDialog.h  Logging.cpp  Logging.h  MainWindow.cpp  MainWindow.h  Pane.cpp  Pane.h  QuickConnectDialog.cpp  QuickConnectDialog.h  SerialSession.cpp  SerialSession.h  SessionEditDialog.cpp  (+34 more)
include/: profile.h  tscrt.h
resources/: make_icon.py  tscrt.desktop  tscrt_mac.icns  tscrt_win.qrc  tscrt_win.rc  walk_deps.py
resources/help/: usage_de.html  usage_en.html  usage_es.html  usage_fr.html  usage_it.html  usage_ja.html  usage_ko.html  usage_pt.html  usage_ru.html  usage_zh.html
scripts/: build-universal-mac.sh
tests/: test_action_parser.cpp  test_cron.cpp  test_profile.cpp
translations/: apply_translations.py  tscrt_win_de.ts  tscrt_win_en.ts  tscrt_win_es.ts  tscrt_win_fr.ts  tscrt_win_it.ts  tscrt_win_ja.ts  tscrt_win_ko.ts  tscrt_win_pt.ts  tscrt_win_ru.ts  tscrt_win_zh.ts
